--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
           <form>
             <div class="form-group">
               <label for="modalTaskDescription">Task description</label>
-              <textarea id="modalTaskDescription" rows="3"></textarea>
+              <br />
+              <textarea id="modalTaskDescription" rows="3" cols="60"></textarea>
             </div>
             <div class="form-group">
               <label for="modalDueDate">Due date</label>
+              <br />
               <input type="text" id="modalDueDate" placeholder="mm/dd/yyyy" autocomplete="off" />
             </div>
           </form>
